Update for latest JDK changes