@@ -1,17 +1,19 @@
 package io.github.krakowski;
 
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SegmentAllocator;
+import java.lang.foreign.MemorySession;
 
 import static org.unix.Linux.printf;
 
 public final class NativeHelloWorld {
 
     public static void main(String... args) {
-        try (var scope = ResourceScope.newConfinedScope()) {
-            var allocator = SegmentAllocator.nativeAllocator(scope);
-            var format = allocator.allocateUtf8String("Hello %s");
-            var value = allocator.allocateUtf8String("World");
+        print();
+    }
+
+    public static void print() {
+        try (var session = MemorySession.openConfined()) {
+            var format = session.allocateUtf8String("Hello %s");
+            var value = session.allocateUtf8String("World");
 
             printf(format, value.address());
         }
